extends Control

# 01. Cat Paw Nebula
func _on_01_cats_paw_nebula_pressed():
	get_tree().change_scene("res://scenes/01_cats_paw_nebula.tscn")

# 02. Orion Nebula
func _on_02_orion_nebula_pressed():
	get_tree().change_scene("res://scenes/02_orion_nebula.tscn")

# 03. Nebula ESO 378-1
func _on_03_eso_378_1_378_1_pressed():
	get_tree().change_scene("res://scenes/03_eso_378_1_378_1.tscn")

# 04. Prawn Nebula
func _on_04_prawn_nebula_pressed():
	get_tree().change_scene("res://scenes/04_prawn_nebula.tscn")

# 05. Medusa Nebula
func _on_05_medusa_nebula_pressed():
	get_tree().change_scene("res://scenes/05_medusa_nebula.tscn")

# 06. Dark Nebula Barnard 59
func _on_06_dark_nebula_barnard_59_pressed():
	get_tree().change_scene("res://scenes/06_dark_nebula_barnard_59.tscn")

# 07. Planetary Nebula Fleming 11
func _on_07_platenary_nebula_fleming_11_pressed():
	get_tree().change_scene("res://scenes/07_platenary_nebula_fleming_11.tscn")

# 08. Horse Head Nebula
func _on_08_horse_head_nebula_pressed():
	get_tree().change_scene("res://scenes/08_horse_head_nebula.tscn")

# 09. Omega Nebula
func _on_09_omega_nebula_pressed():
	get_tree().change_scene("res://scenes/09_omega_nebula.tscn")

# 10. Carina Nebula
func _on_10_carina_nebula_pressed():
	get_tree().change_scene("res://scenes/10_carina_nebula.tscn")

# 11. Eagle Nebula
func _on_11_eagle_nebula_pressed():
	get_tree().change_scene("res://scenes/11_eagle_nebula.tscn")

# 12. Dumbbell Nebula
func _on_12_dumbbell_nebula_pressed():
	get_tree().change_scene("res://scenes/12_dumbbell_nebula.tscn")

# 13. Star Forming Resiong Messier
func _on_13_star_forming_region_messier_pressed():
	get_tree().change_scene("res://scenes/13_star_forming_region_messier.tscn")

# 14. Flame Nebula
func _on_14_flame_nebula_pressed():
	get_tree().change_scene("res://scenes/14_flame_nebula.tscn")

# 15. Cometary Globule CG 4
func _on_15_cometary_globule_cg4_pressed():
	get_tree().change_scene("res://scenes/15_cometary_globule_cg4.tscn")

# 16. Pencil Nebula
func _on_16_pencil_nebula_pressed():
	get_tree().change_scene("res://scenes/16_pencil_nebula.tscn")

# 17. Seagull Nebula
func _on_17_seagull_nebula_pressed():
	get_tree().change_scene("res://scenes/17_seagull_nebula.tscn")

# 18. Chicken Nebula
func _on_18_chicken_nebula_pressed():
	get_tree().change_scene("res://scenes/18_chicken_nebula.tscn")

# 19. Saturn Nebula
func _on_19_saturn_nebula_pressed():
	get_tree().change_scene("res://scenes/19_saturn_nebula.tscn")

# 20. Tarantula Nebula
func _on_20_tarantula_nebula_pressed():
	get_tree().change_scene("res://scenes/20_tarantula_nebula.tscn")

# Back to Menu
func _on_back_to_menu_pressed():
	get_tree().change_scene("res://scenes/main_menu.tscn")
